--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "next",
+		"@sveltejs/adapter-static": "next",
 		"@sveltejs/kit": "next",
 		"mdsvex": "^0.8.9",
 		"rehype-autolink-headings": "^5.0.1",
