--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"d3-geo": "^2.0.1",
 		"d3-scale-chromatic": "^2.0.0",
+		"numeral": "^2.0.6",
 		"svelte-canvas": "^0.6.1",
 		"topojson-client": "^3.1.0"
 	}
