--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"remark-abbr": "^1.4.1",
 		"remark-github": "^10.0.1",
 		"svelte": "^3.29.0",
+		"svelte-preprocess": "^4.7.3",
 		"vite": "^2.1.0"
 	},
 	"type": "module",
