--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"node": ">= 12.17.0"
 	},
 	"dependencies": {
+		"@types/d3-scale-chromatic": "^2.0.0",
 		"d3-geo": "^2.0.1",
 		"d3-scale-chromatic": "^2.0.0",
 		"numeral": "^2.0.6",
