--- a/.svelte-kit/output/manifest.json
+++ b/.svelte-kit/output/manifest.json
@@ -1,10 +1,10 @@
 {
   ".svelte-kit/build/runtime/internal/start.js": {
-    "file": "start-ee4d62bf.js",
+    "file": "start-562c6de2.js",
     "src": ".svelte-kit/build/runtime/internal/start.js",
     "isEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ],
     "dynamicImports": [
       "src/routes/__layout.svelte",
@@ -19,7 +19,7 @@
       "src/routes/fibonacci.svelte",
       "src/routes/listview/index.svelte",
       "src/routes/settings.svelte",
-      "_index-098fbe9e.js",
+      "_index-4f08dbf1.js",
       "src/routes/apidemo/index.svelte",
       "src/routes/apidemo/[lastName].svelte",
       "src/routes/counter/index.svelte",
@@ -33,211 +33,208 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-57b94405.js",
+    "file": "pages/__layout.svelte-9105860c.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ],
     "css": [
       "assets/pages/__layout.svelte-7d55c0ac.css"
     ]
   },
   ".svelte-kit/build/components/error.svelte": {
-    "file": "error.svelte-b3333e59.js",
+    "file": "error.svelte-3509a2d1.js",
     "src": ".svelte-kit/build/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-07ef8a5d.js",
+    "file": "pages/index.svelte-4387430a.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ],
     "css": [
       "assets/pages/index.svelte-6a899900.css"
     ]
   },
   "src/routes/example-markdown.md": {
-    "file": "pages/example-markdown.md-fb630b93.js",
+    "file": "pages/example-markdown.md-05198031.js",
     "src": "src/routes/example-markdown.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ]
   },
   "src/routes/fibonaccidoc.md": {
-    "file": "pages/fibonaccidoc.md-7ac5bb04.js",
+    "file": "pages/fibonaccidoc.md-499bdd49.js",
     "src": "src/routes/fibonaccidoc.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ]
   },
   "src/routes/particlerain.svelte": {
-    "file": "pages/particlerain.svelte-9e6f1990.js",
+    "file": "pages/particlerain.svelte-f9b824f0.js",
     "src": "src/routes/particlerain.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ],
     "css": [
       "assets/pages/particlerain.svelte-f46ffd44.css"
     ]
   },
   "src/routes/audioplayer/index.svelte": {
-    "file": "pages/audioplayer/index.svelte-6095d98c.js",
+    "file": "pages/audioplayer/index.svelte-9db364ca.js",
     "src": "src/routes/audioplayer/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ],
     "css": [
       "assets/pages/audioplayer/index.svelte-60b66078.css"
     ]
   },
   "src/routes/listviewdoc.md": {
-    "file": "pages/listviewdoc.md-1c73f473.js",
+    "file": "pages/listviewdoc.md-4ba8a50b.js",
     "src": "src/routes/listviewdoc.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ]
   },
   "src/routes/covidstats/index.svelte": {
-    "file": "pages/covidstats/index.svelte-90ad4a52.js",
+    "file": "pages/covidstats/index.svelte-601de048.js",
     "src": "src/routes/covidstats/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js",
-      "_list-303a8b29.js"
+      "_vendor-6df07bd0.js"
     ],
     "css": [
-      "assets/pages/covidstats/index.svelte-93843405.css"
+      "assets/pages/covidstats/index.svelte-45a94576.css"
     ]
   },
   "src/routes/fibonacci.svelte": {
-    "file": "pages/fibonacci.svelte-1708da9b.js",
+    "file": "pages/fibonacci.svelte-6b01c554.js",
     "src": "src/routes/fibonacci.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ],
     "css": [
       "assets/pages/fibonacci.svelte-16b5df49.css"
     ]
   },
   "src/routes/listview/index.svelte": {
-    "file": "pages/listview/index.svelte-db7ba7f3.js",
+    "file": "pages/listview/index.svelte-02e09ccb.js",
     "src": "src/routes/listview/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js",
-      "_list-303a8b29.js",
-      "_stores-a3dbabd5.js"
+      "_vendor-6df07bd0.js",
+      "_stores-b4081be3.js"
     ],
     "css": [
-      "assets/pages/listview/index.svelte-a212d4bf.css"
+      "assets/pages/listview/index.svelte-7310ad12.css"
     ]
   },
   "src/routes/settings.svelte": {
-    "file": "pages/settings.svelte-cbcd2351.js",
+    "file": "pages/settings.svelte-74a62742.js",
     "src": "src/routes/settings.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ]
   },
   "src/routes/pattern.svelte": {
-    "file": "pages/pattern.svelte-42aa812e.js",
+    "file": "pages/pattern.svelte-66f9dc69.js",
     "src": "src/routes/pattern.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ],
     "css": [
       "assets/pages/pattern.svelte-ec6175e4.css"
     ]
   },
   "src/routes/apidemo/index.svelte": {
-    "file": "pages/apidemo/index.svelte-e52dfbc7.js",
+    "file": "pages/apidemo/index.svelte-6caa306f.js",
     "src": "src/routes/apidemo/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ],
     "css": [
       "assets/pages/apidemo/index.svelte-1ff651ee.css"
     ]
   },
   "src/routes/apidemo/[lastName].svelte": {
-    "file": "pages/apidemo/[lastName].svelte-f42976b9.js",
+    "file": "pages/apidemo/[lastName].svelte-a4ed1b7e.js",
     "src": "src/routes/apidemo/[lastName].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ],
     "css": [
       "assets/pages/apidemo/[lastName].svelte-b1dad7d8.css"
     ]
   },
   "src/routes/counter/index.svelte": {
-    "file": "pages/counter/index.svelte-4f2c43dc.js",
+    "file": "pages/counter/index.svelte-efa825a6.js",
     "src": "src/routes/counter/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js",
-      "_stores-a3dbabd5.js"
+      "_vendor-6df07bd0.js",
+      "_stores-b4081be3.js"
     ],
     "css": [
       "assets/pages/counter/index.svelte-dbcfad1d.css"
     ]
   },
   "src/routes/dynamic/index.svelte": {
-    "file": "pages/dynamic/index.svelte-bb69f0e5.js",
+    "file": "pages/dynamic/index.svelte-b82a60b6.js",
     "src": "src/routes/dynamic/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ]
   },
   "src/routes/tabdemo/index.svelte": {
-    "file": "pages/tabdemo/index.svelte-a2d04a51.js",
+    "file": "pages/tabdemo/index.svelte-aac44f64.js",
     "src": "src/routes/tabdemo/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js",
-      "_index-098fbe9e.js",
+      "_vendor-6df07bd0.js",
+      "_index-4f08dbf1.js",
       "src/routes/listviewdoc.md",
       "src/routes/particlerain.svelte",
       "src/routes/fibonacci.svelte",
       "src/routes/covidstats/index.svelte",
       "src/routes/pattern.svelte",
       "src/routes/audioplayer/index.svelte",
-      "src/routes/example-markdown.md",
-      "_list-303a8b29.js"
+      "src/routes/example-markdown.md"
     ],
     "css": [
       "assets/pages/tabdemo/index.svelte-5920d885.css",
@@ -245,24 +242,24 @@
     ]
   },
   "src/routes/about.svelte": {
-    "file": "pages/about.svelte-28b6086c.js",
+    "file": "pages/about.svelte-c9ac7bfa.js",
     "src": "src/routes/about.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js"
+      "_vendor-6df07bd0.js"
     ],
     "css": [
       "assets/about.svelte_svelte&type=style&lang-42f179f3.css"
     ]
   },
   "src/routes/treedemo/index.svelte": {
-    "file": "pages/treedemo/index.svelte-0f519560.js",
+    "file": "pages/treedemo/index.svelte-6c4eeb0d.js",
     "src": "src/routes/treedemo/index.svelte",
     "isEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js",
-      "_index-098fbe9e.js",
+      "_vendor-6df07bd0.js",
+      "_index-4f08dbf1.js",
       "src/routes/particlerain.svelte",
       "src/routes/example-markdown.md",
       "src/routes/pattern.svelte",
@@ -273,29 +270,20 @@
       "assets/about.svelte_svelte&type=style&lang-42f179f3.css"
     ]
   },
-  "_vendor-e46ca3cc.js": {
-    "file": "chunks/vendor-e46ca3cc.js"
+  "_vendor-6df07bd0.js": {
+    "file": "chunks/vendor-6df07bd0.js"
   },
-  "_list-303a8b29.js": {
-    "file": "chunks/list-303a8b29.js",
+  "_stores-b4081be3.js": {
+    "file": "chunks/stores-b4081be3.js",
     "imports": [
-      "_vendor-e46ca3cc.js"
-    ],
-    "css": [
-      "assets/list-388239ef.css"
+      "_vendor-6df07bd0.js"
     ]
   },
-  "_stores-a3dbabd5.js": {
-    "file": "chunks/stores-a3dbabd5.js",
-    "imports": [
-      "_vendor-e46ca3cc.js"
-    ]
-  },
-  "_index-098fbe9e.js": {
-    "file": "chunks/index-098fbe9e.js",
+  "_index-4f08dbf1.js": {
+    "file": "chunks/index-4f08dbf1.js",
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-e46ca3cc.js",
+      "_vendor-6df07bd0.js",
       "src/routes/particlerain.svelte",
       "src/routes/example-markdown.md",
       "src/routes/pattern.svelte",
